test/fixtures/cli/exceptions/dest/strict-semicolons.txt

test/fixtures/cli/exceptions/src/strict-semicolons.js:1:10: error: expected a semicolon
var x = 7
         ^

1 error generated.

objjc: error: compilation aborted, fatal error
